--- a/sections/sidebar.liquid
+++ b/sections/sidebar.liquid
@@ -1,5 +1,5 @@
 <div data-section-id="{{ section.id }}" data-section-type="sidebar-section">
-  <nav class="grid__item small--text-center medium-up--one-fifth" role="navigation">
+  <nav class="sidebar small--text-center" role="navigation">
     <hr class="hr--small medium-up--hide">
     <button id="ToggleMobileMenu" class="mobile-menu-icon medium-up--hide" aria-haspopup="true" aria-owns="SiteNav">
       <span class="line"></span>
