--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -3,4 +3,5 @@
   The contents of the lists-collections.liquid template can be found in /sections/lists-collections-template.liquid
 {% endcomment %}
 
+{% include 'breadcrumb-nav' %}
 {% section 'list-collections-template' %}
