--- a/templates/page.contact.liquid
+++ b/templates/page.contact.liquid
@@ -1,4 +1,7 @@
 <!-- /templates/page.contact.liquid -->
+
+{% include 'breadcrumb-nav' %}
+
 <h1 class="small--text-center">{{ page.title }}</h1>
 
 <div class="rte">
