--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -20,7 +20,7 @@
   <div class="collection-grid">
     <div class="grid grid--uniform" role="list">
       {% for block in section.blocks limit: section.blocks.size %}
-        <div class="grid__item {{ grid_item_width }} slide-up-animation animated" {{ block.shopify_attributes }} role="listitem">
+        <div class="grid__item {{ grid_item_width }}" {{ block.shopify_attributes }} role="listitem">
           {%- assign collection = collections[block.settings.collection] -%}
           {%- assign custom_class = '' -%}
           {%- assign difference_from_last = section.blocks.size | minus: forloop.index  -%}
