--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -3,6 +3,8 @@
   The contents of the collection.liquid template can be found in /sections/collection-template.liquid
 {% endcomment %}
 
+{% include 'breadcrumb-nav' %}
+
 {% section 'collection-template' %}
 
 <script>
