--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -2,5 +2,6 @@
   The contents of the product.liquid template can be found in /sections/product-template.liquid
 {% endcomment %}
 
+{% include 'breadcrumb-nav' %}
 {% section 'product-template' %}
 {% section 'product-recommendations' %}
