--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -152,6 +152,13 @@
                     %}
                       <br><small>{{ item.variant.title }}</small>
                     {% endunless %}
+                    {%- unless pickup_address -%}
+                      {%- if item.properties._bold_bundles_price != blank -%}
+                        {%- assign pickup_address = cart.attributes.pickup_address -%}
+                      {%- elsif item.properties._method == 'pickup' -%}
+                        {%- assign pickup_address = item.properties.pickup_location -%}
+                      {%- endif -%}
+                    {%- endunless -%}
                     <br>
                     {%- if item.properties._bold_bundle_price_rules_external_id != blank and cart.attributes.delivery_method == 'pickup' -%}
                       <small class="cart__policies">{{ cart.attributes.delivery_method }}</small>
@@ -159,22 +166,13 @@
                     {% if item.properties._method == 'pickup' %}
                       <small class="cart__policies">{{ 'layout.product.pickup' | t }}: {{ item.properties.pickup_location }}</small>
                     {% elsif item.properties._method == blank and cart.attributes.delivery_method == 'pickup' %}
-                    <small class="cart__policies">{{ cart.attributes.pickup_address }}</small>
+                      <small class="cart__policies">{{ pickup_address }}</small>
                     {% endif %}
                   </p>
                   {%- if item.properties._bold_bundle_price_rules_external_id != blank -%}
                     {%- if item.properties._bold_bundles_price == blank -%}
                       <span class="hide js-remove-bundle-from-cart">{{item.id}}</span>
                     {%- endif -%}
-                  {%- endif -%}
-                  {%- if cart.attributes.pickup_address == blank -%}
-                    {%- unless pickup_address -%}
-                      {%- if item.properties._method == 'pickup' -%}
-                        {%- assign pickup_address = item.properties.pickup_location -%}
-                      {%- endif -%}
-                    {%- endunless -%}
-                  {%- else -%}
-                    {%- assign pickup_address = cart.attributes.pickup_address -%}
                   {%- endif -%}
                   <p class="txt--minor">
                     <a href="{{ routes.cart_change_url }}?line={{ forloop.index }}&amp;quantity=0" class="cart__remove hide js-remove-link">{{ 'cart.general.remove' | t }}</a>
@@ -245,7 +243,8 @@
                   <label class="visually-hidden" for="updates_{{ item.key }}">{{ 'cart.label.quantity' | t }}</label>
                   <input class="quantity-selector form__input js-cart-quantity-selector js-cart-quantity-selector-{{forloop.index}}" type="number" name="updates[]"
                     id="updates_{{ item.key }}" value="{{ item.quantity }}"
-                    {% if item.properties._custom_increment %}step="{{item.properties._custom_increment}}" {% endif %}
+                    {% if item.properties._custom_increment %}step="{{item.properties._custom_increment}}"{% endif %}
+                    readonly
                     min="{% if item.properties._custom_increment %}{{item.properties._custom_increment}}{% else %}0{% endif %}">
                   <p class="cart__error-message cart__error-message--invalid-quantity js-invalid-quantity js-invalid-quantity-{{forloop.index}} hide">Please enter a valid quantity</p>
                 </td>
@@ -324,7 +323,7 @@
               <div class="grid__item medium-up--one-third">
                 <p class="cart__delivery-title">{{ 'layout.cart.choose_delivery_type_html' | t }}</p>
                 {%- if fulfillment_method == 'delivery' -%}
-                  
+
                   <label for="standard-method" class="cart__method-label">
                     <input type="radio" name="attributes[_method]" class="js-delivery-type js-check-dates" id="standard-method" value="standard_delivery" data-price="{{ settings.normal_delivery_price | default: '0' }}">
                     <span>{{ 'layout.cart.standard_delivery' | t }}</span>
@@ -334,7 +333,7 @@
                     {{ 'layout.cart.standard_delivery_explanation' | t }}
                   </p>
                   {%- unless hide_expedited -%}
-                    
+
                     <label for="noon-method" class="cart__method-label">
                       <input type="radio" name="attributes[_method]" class="js-delivery-type js-check-dates" id="noon-method" value="before_noon" data-price="{{ settings.before_noon_delivery_price | default: '4999' }}">
                       <span>{{ 'layout.cart.before_noon' | t }}</span>
@@ -343,7 +342,7 @@
                       <dfn class="sr-only">{{ 'layout.cart.before_noon' | t }}</dfn>
                       {{ 'layout.cart.before_noon_explanation' | t }}
                     </p>
-                    
+
                     <label for="truck-method" class="cart__method-label">
                       <input type="radio" name="attributes[_method]" class="js-delivery-type js-check-dates" id="truck-method" value="first_off_truck" data-price="{{ settings.before_nine_delivery_price | default: '9999' }}">
                       <span>{{ 'layout.cart.first_off_truck' | t }}</span>
@@ -465,11 +464,12 @@
         </footer>
         {%- comment -%}{% render 'shipping-calculator' %}{%- endcomment -%}
         {%- if invalid_fulfillment == false and has_custom_pricing == true -%}
-          <input type="hidden" data-name="latitude" name="attributes[customer_latitude]" class="js-cart-attribute js-address-latitude" value="{{cart.attributes.customer_latitude}}">
-          <input type="hidden" data-name="longitude" name="attributes[customer_longitude]" class="js-cart-attribute js-address-longitude" value="{{cart.attributes.customer_longitude}}">
-          <input type="hidden" data-name="zipcode" name="attributes[zip_code]" class="js-cart-attribute js-address-zip" value="{{cart.attributes.zip_code}}">
           {%- if pickup_address != blank -%}
             <input type="hidden" data-name="pickup_address" name="attributes[pickup_address]" class="js-cart-attribute js-address-pickup" value="{{pickup_address}}">
+          {%- else -%}
+            <input type="hidden" data-name="latitude" name="attributes[customer_latitude]" class="js-cart-attribute js-address-latitude" value="{{cart.attributes.customer_latitude}}">
+            <input type="hidden" data-name="longitude" name="attributes[customer_longitude]" class="js-cart-attribute js-address-longitude" value="{{cart.attributes.customer_longitude}}">
+            <input type="hidden" data-name="zipcode" name="attributes[zip_code]" class="js-cart-attribute js-address-zip" value="{{cart.attributes.zip_code}}">
           {%- endif -%}
         {%- endif -%}
       </form>
