--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -88,8 +88,16 @@
     {%- elsif item.properties._method != fulfillment_method -%}
       {%- assign invalid_fulfillment = true -%}
     {%- endif -%}
+  {%- elsif item.properties._bold_bundle_price_rules_external_id != blank -%}
+    {%- assign fulfillment_method = cart.attributes.delivery_method -%}
+    {%- if fulfillment_method == 'delivery' -%}
+      {%- assign contains_delivery_items = true -%}
+    {%- endif -%}
   {%- endif -%}
 {%- endfor -%}
+{%- if fulfillment_method == 'delivery' -%}
+  {%- assign contains_delivery_items = true -%}
+{%- endif -%}
 {%- if contains_delivery_items and contains_pickup_sod -%}
   {%- assign invalid_fulfillment = true -%}
   {%- assign fulfillment_method = 'none' -%}
@@ -110,6 +118,7 @@
           </thead>
           <tbody>
             {%- assign subtotal = 0 -%}
+            {%- assign variant_title = '' -%}
             {% for item in cart.items %}
               <tr class="cart__row responsive-table__row">
                 <td class="cart__table-cell--image small--text-center">
@@ -160,12 +169,25 @@
                       {%- endif -%}
                     {%- endunless -%}
                     <br>
-                    {%- if item.properties._bold_bundle_price_rules_external_id != blank and cart.attributes.delivery_method == 'pickup' -%}
-                      <small class="cart__policies">{{ cart.attributes.delivery_method }}</small>
+                    {%- if item.properties._bold_bundle_price_rules_external_id != blank and variant_title == '' -%}
+                      {%- assign variant_title = item.variant.title | downcase -%}
+                    {%- endif -%}
+                    {%- assign possible_pickup = false -%}
+                    {%- if item.properties._bold_bundle_price_rules_external_id != blank -%}
+                      {%- if variant_title contains 'pickup' -%}
+                        {%- assign possible_pickup = true -%}
+                      {%- elsif fulfillment_method == 'pickup' -%}
+                        {%- assign possible_pickup = true -%}
+                      {%- endif -%}
+                    {%- endif -%}
+                    {%- if item.properties._bold_bundle_price_rules_external_id != blank and fulfillment_method == 'pickup' -%}
+                      {%- unless variant_title contains 'delivery' -%}
+                        <small class="cart__policies">{{ 'layout.product.pickup' | t }}:</small>
+                      {%- endunless -%}
                     {%- endif -%}
                     {% if item.properties._method == 'pickup' %}
                       <small class="cart__policies">{{ 'layout.product.pickup' | t }}: {{ item.properties.pickup_location }}</small>
-                    {% elsif item.properties._method == blank and cart.attributes.delivery_method == 'pickup' %}
+                    {%- elsif variant_title contains 'delivery' -%}{% elsif item.properties._method == blank and fulfillment_method == 'pickup' %}
                       <small class="cart__policies">{{ pickup_address }}</small>
                     {% endif %}
                   </p>
@@ -501,9 +523,7 @@
     const cartPickupAddress = '{{ pickup_address }}';
     const cartZipCode = '{{ cart.attributes.zip_code }}';
     {% if first_zip != '' %}
-      const regex = /\d{5}/gm;
-      const exec = regex.exec('{{first_zip}}');
-      const firstZip = (exec != null && exec.length > 0) ? exec[0] : '';
+      const firstZipAddress = '{{first_zip}}';
     {% endif %}
     const cartItems = [{% for item in cart.items %}{
         {%- assign item_value = 0 -%}
@@ -519,7 +539,7 @@
         {%- if item.properties._bold_bundles_price != blank -%}
           {%- assign product_type = 'bundle' -%}
           {%- assign item_price = item.properties._bold_bundles_price | times: item.quantity | money_without_currency | replace: ',', '' -%}
-          full_price: {{item.final_line_price | times: 0.01}},
+          full_price: {{item.final_price | times: 0.01}},
         {%- endif -%}
         variant_id: {{item.id}}, quantity: {{item.quantity}}, price: {{item_price}},
         {%- if item.properties -%}
