--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -127,6 +127,10 @@
       <link rel="stylesheet" href="{{ 'cart.css' | asset_url }}">
     {%- endif -%}
   </noscript>
+  <!-- honeybadger -->
+  {%- if settings.honeybadger_key -%}
+    <script src="//js.honeybadger.io/v3.1/honeybadger.min.js"></script>
+  {%- endif -%}
 </head>
 
 {%- assign show_sidebar = true -%}
@@ -205,6 +209,36 @@
     <span id="new-window-1">Opens an external site</span>
     <span id="new-window-2">Opens an external site in a new window</span>
   </div>
+  <!-- honeybadger -->
+  {%- if settings.honeybadger_key -%}
+    <script>
+      const honeyBadgerContext = {};
+      if (typeof Honeybadger !== 'undefined') {
+        {%- if template.name == 'cart' -%}
+          if (typeof cartItems !== 'undefined') {
+            honeyBadgerContext.cartItems = cartItems;
+            honeyBadgerContext.cartDeliveryMethod = cartDeliveryMethod;
+
+            if (cartDeliveryMethod === 'pickup') {
+              honeyBadgerContext.cartPickupAddress = cartPickupAddress;
+            } else if (cartDeliveryMethod === 'delivery') {
+              honeyBadgerContext.cartDeliveryAddress = cartDeliveryAddress;
+            }
+          }
+        {%- endif -%}
+        {%- if customer -%}
+          honeyBadgerContext.user_id: {{customer.id}};
+          honeyBadgerContext.user_email: {{customer.email}};
+        {%- endif -%}
+
+        Honeybadger.configure({
+          apiKey: 'a7862485',
+          environment: 'production'
+        });
+        Honeybadger.setContext(honeyBadgerContext);
+      }
+    </script>
+  {%- endif -%}
   <script>
     window.theme = window.theme || {};
     theme.routes = {
@@ -265,20 +299,20 @@
   {%- endif -%}
   <script src="{{ 'api.jquery.js' | shopify_asset_url }}" defer></script>
   <script src="{{ 'modernizr.min.js' | asset_url }}" defer></script>
-  <script src="{{ 'theme.js' | asset_url }}" defer></script>
-  <script src="{{ 'sidebar-cart.js' | asset_url }}" defer></script>
-  <script src="{{ 'utils.js' | asset_url }}" defer></script>
+  <script src="{{ 'theme.js' | asset_url }}" defer crossorigin></script>
+  <script src="{{ 'sidebar-cart.js' | asset_url }}" defer crossorigin></script>
+  <script src="{{ 'utils.js' | asset_url }}" defer crossorigin></script>
   {%- if template.name == 'account' -%}
-    <script src="{{ 'account.js' | asset_url }}" defer></script>
+    <script src="{{ 'account.js' | asset_url }}" defer crossorigin></script>
   {%- endif -%}
   {%- if template.name == 'product' -%}
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry&key=AIzaSyBDNbFA4quUVSMGdxSn_lqnZVcp72c5K9k" defer></script>
-    <script src="{{ 'product.js' | asset_url }}" defer></script>
+    <script src="{{ 'product.js' | asset_url }}" defer crossorigin></script>
     {% comment %}<script src="{{ 'tabs.js' | asset_url }}" defer></script>{% endcomment %}
   {%- endif -%}
   {%- if template.name == 'cart' -%}
     <script src="{{ 'zebra_datepicker.min.js' | asset_url }}" defer></script>
-    <script src="{{ 'cart.js' | asset_url }}" defer></script>
+    <script src="{{ 'cart.js' | asset_url }}" defer crossorigin></script>
   {%- endif -%}
 
   {%- if template.name == 'product' -%}
