--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -294,5 +294,16 @@
   {% include 'ss-script-assets' %}
   <script src="{{ 'third-party-code.js' | asset_url }}" defer></script>
   {% include 'smile-initializer' %}
+  {%- unless shop.permanent_domain contains 'supersod-staging' -%}
+    <script type='text/javascript'>
+      window.__lo_site_id = 151169;
+
+      (function() {
+        var wa = document.createElement('script'); wa.type = 'text/javascript'; wa.async = true;
+        wa.src = 'https://d10lpsik1i8c69.cloudfront.net/w.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(wa, s);
+        })();
+    </script>
+  {%- endunless -%}
 </body>
 </html>
